--- a/src/Components/Navbar/Header.css
+++ b/src/Components/Navbar/Header.css
@@ -12,7 +12,7 @@
   }
   
   .brand-item:hover {
-    color: green;
+    color: #006838;
     cursor: pointer;
   }
   .header-container .categories-block .category-item .brands-container {
