--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,16 @@
 @import 'flowbite';
+/* Add this CSS to your styles */
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+#root {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
+}
